# wordcount

./: Cargo.toml  README.md  text.txt
src/: lib.rs  main.rs
