[package]
name = "wordcount"
version = "0.1.0"
authors = ["kironbot"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple Char/Word/Line Counter"
readme = "README.md"
repository = "https://github.com/kironbot/wordcount"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "kironbot/wordcount" }

[dependencies]
regex = "1.0"
